Update 'es3e2z6qe-go' component image to: quay.io/rhtap_qe/rhtap-qe:a7993d6a3c8688c88f24208a3b7bb10606427bf0@sha256:b29517613ebd3e13825669a548597ccfb851cca464c178f62bef3c542c3880c8

--- a/components/es3e2z6qe-go/overlays/development/deployment-patch.yaml
+++ b/components/es3e2z6qe-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: es3e2z6qe-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:a7993d6a3c8688c88f24208a3b7bb10606427bf0@sha256:b29517613ebd3e13825669a548597ccfb851cca464c178f62bef3c542c3880c8
+          name: container-image
